WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186983
Fix the composition underline to be transformed by -apple-color-filter
https://bugs.webkit.org/show_bug.cgi?id=186983
Summary
Fix the composition underline to be transformed by -apple-color-filter
Simon Fraser (smfr)
Reported
2018-06-24 16:53:40 PDT
Fix the composition underline to be transformed by -apple-color-filter
Attachments
Patch
(5.49 KB, patch)
2018-06-24 16:55 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-06-24 16:55:16 PDT
Created
attachment 343471
[details]
Patch
Simon Fraser (smfr)
Comment 2
2018-06-24 16:55:30 PDT
rdar://problem/40515558
alan
Comment 3
2018-06-24 17:25:14 PDT
Comment on
attachment 343471
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=343471&action=review
> Source/WebCore/rendering/InlineTextBox.cpp:1172 > + Color underlineColor = underline.compositionUnderlineColor == CompositionUnderlineColor::TextColor ? renderer().style().visitedDependentColorWithColorFilter(CSSPropertyWebkitTextFillColor) : renderer().style().colorByApplyingColorFilter(underline.color); > + context.setStrokeColor(underlineColor);
How do you know when to use the transformed color?
Simon Fraser (smfr)
Comment 4
2018-06-24 18:18:57 PDT
(In reply to zalan from
comment #3
)
> Comment on
attachment 343471
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=343471&action=review
> > > Source/WebCore/rendering/InlineTextBox.cpp:1172 > > + Color underlineColor = underline.compositionUnderlineColor == CompositionUnderlineColor::TextColor ? renderer().style().visitedDependentColorWithColorFilter(CSSPropertyWebkitTextFillColor) : renderer().style().colorByApplyingColorFilter(underline.color); > > + context.setStrokeColor(underlineColor); > > How do you know when to use the transformed color?
All the colors we paint with should use the transformed color (except for semantic colors).
WebKit Commit Bot
Comment 5
2018-06-24 18:53:06 PDT
Comment on
attachment 343471
[details]
Patch Clearing flags on attachment: 343471 Committed
r233135
: <
https://trac.webkit.org/changeset/233135
>
WebKit Commit Bot
Comment 6
2018-06-24 18:53:07 PDT
All reviewed patches have been landed. Closing bug.
alan
Comment 7
2018-06-24 18:53:41 PDT
(In reply to Simon Fraser (smfr) from
comment #4
)
> (In reply to zalan from
comment #3
) > > Comment on
attachment 343471
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=343471&action=review
> > > > > Source/WebCore/rendering/InlineTextBox.cpp:1172 > > > + Color underlineColor = underline.compositionUnderlineColor == CompositionUnderlineColor::TextColor ? renderer().style().visitedDependentColorWithColorFilter(CSSPropertyWebkitTextFillColor) : renderer().style().colorByApplyingColorFilter(underline.color); > > > + context.setStrokeColor(underlineColor); > > > > How do you know when to use the transformed color? > > All the colors we paint with should use the transformed color (except for > semantic colors).
RenderStyle API does not really give me any guidance in that direction.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug