Fix the composition underline to be transformed by -apple-color-filter https://bugs.webkit.org/show_bug.cgi?id=186983 rdar://problem/40515558

Reviewed by Zalan Bujtas.

Source/WebCore:

Transform the composition underline color with the color filter.

Test: css3/color-filters/color-filter-composition-underline-color.html

* rendering/InlineTextBox.cpp:
(WebCore::InlineTextBox::paintCompositionUnderline const):

LayoutTests:

* css3/color-filters/color-filter-composition-underline-color-expected.html: Added.
* css3/color-filters/color-filter-composition-underline-color.html: Added.


Canonical link: https://commits.webkit.org/202226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233135 268f45cc-cd09-0410-ab3c-d52691b4dbfc